tests/snapshots/ast_check__input_files@blockquote.md.snap
---
source: tests/ast_check.rs
expression: res
input_file: tests/input_files/blockquote.md
---
- ~
- range:
    start: 0
    end: 43
  children:
    - Heading:
        id: ~
        classes: []
        attributes: []
        range:
          start: 0
          end: 13
        level: 1
        content: blockquote
    - BlockQuote:
        range:
          start: 14
          end: 30
        children:
          - Paragraph:
              range:
                start: 16
                end: 30
              children:
                - Text:
                    range:
                      start: 16
                      end: 29
                    text: regular quote
    - BlockQuote:
        range:
          start: 31
          end: 43
        children:
          - Paragraph:
              range:
                start: 33
                end: 43
              children:
                - Text:
                    range:
                      start: 33
                      end: 43
                    text: note quote
