tests/snapshots/ast_check__input_files@empty.md.snap
---
source: tests/ast_check.rs
expression: res
input_file: tests/input_files/empty.md
---
- ~
- range:
    start: 0
    end: 0
  children: []
