tests/snapshots/ast_check__input_files@heading.md.snap
---
source: tests/ast_check.rs
expression: res
input_file: tests/input_files/heading.md
---
- ~
- range:
    start: 0
    end: 30
  children:
    - Heading:
        id: ~
        classes: []
        attributes: []
        range:
          start: 0
          end: 30
        level: 1
        children:
          - Text:
              range:
                start: 2
                end: 30
              text: this is a heading on level 1
